dmexco #109: fix visibility at two digits

--- a/input/assets/css/_cart.scss
+++ b/input/assets/css/_cart.scss
@@ -152,7 +152,7 @@
 
 .input-number {
   width: 40px;
-  padding: 0 12px;
+  padding: 0 10px;
   margin: 0 0.5em;
   vertical-align: top;
   text-align: center;
